fixed journal gaps and invert groups

--- a/src/components/Journal/journalStyles.scss
+++ b/src/components/Journal/journalStyles.scss
@@ -157,9 +157,8 @@ scrollbar-width: none;  /* Firefox */
         inset-inline-end:1px !important;
     }
 }
-
 .journal_lessonTypeSelect{
-    width: 70px !important;
+    width: 68px !important;
     text-align: center;
     border: 1px solid transparent;
 }
